Updated playRound function and added event listeners to buttons in index.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     
+  <button id="rock" class="move">Rock</button>
+  <button id="paper" class="move">Paper</button>
+  <button id="scissors" class="move">Scissors</button>
 
+  <div class="result"></div>
   <script src="scripts/index.js"></script>
 </body>
 </html>
