--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <button id="paper" class="move">Paper</button>
   <button id="scissors" class="move">Scissors</button>
 
+  <div class="score">Score: </div>
   <div class="result"></div>
+  <div class="final-result"></div>
   <script src="scripts/index.js"></script>
 </body>
 </html>
