--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Hanken+Grotesk:wght@500;700;800&family=Montserrat:wght@500;700&family=Outfit:wght@300;400;600;700&family=Press+Start+2P&family=Red+Hat+Display:wght@500;700;900&family=Roboto:ital,wght@0,400;0,700;1,300;1,400;1,700&family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body>
-    
-  <button id="rock" class="move">Rock</button>
-  <button id="paper" class="move">Paper</button>
-  <button id="scissors" class="move">Scissors</button>
 
-  <div class="score">Score: </div>
-  <div class="result"></div>
-  <div class="final-result"></div>
+  <main>
+    <h1>Rock Paper Scissors</h1>
+    <div>
+      <button id="rock" class="move btn-move"><img src="images/rock-emoji.png" alt="Rock"></button>
+      <button id="paper" class="move btn-move"><img src="images/paper-emoji.png" alt="Paper"></button>
+      <button id="scissors" class="move btn-move"><img src="images/scissors-emoji.png" alt="Scissors"></button>
+    </div>
+  </main>
+
+  <p class="score">Wins: 0 Losses: 0 Ties: 0</p>
+  <p class="result"></p>
+  <p class="final-result"></p>
+  <button class="play">Play</button>
   <script src="scripts/index.js"></script>
 </body>
 </html>
